# goit-ds-hw-02

./: create_db.py  execute_queries.py  pyproject.toml  seed.py  task_management_systems.db  tasks.sql
